2002-05-31  Jens Finke <jens@triq.net>

	* Makefile.am: Added gconf schema stuff.
	
	* acconfig.h: Undef gconf related variables.

	* configure.in: Check for gconf.

	* src/apotheke-directory.c (monitor_callback): Cosmetic updates.

	* src/apotheke-main.c (post_init_callback): New function.
	(main): Make sure post_init_callback is called.

	* src/apotheke-view-ui.xml.in: Added 'Hide Ignored Files' to commands section.

	* src/apotheke-view.c (hide_ignored_files_state_changed_callback):
	Change the state through gconf only.
	(merge_bonobo_ui_callback): Init hide ignored files toggle item
	according to gconf value, save ui_component pointer.
	(gutter_button_release_callback): Save gutter position with gconf.
	(construct_ui): Try to restore gutter position (doesn't work
	correctly yet).
	(config_value_changed_cb): New function.
	(apotheke_view_instance_init): Setup gconf client.
	(apotheke_view_destroy): Free gconf stuff.
	(apotheke_view_load_uri): Init hide ignored files toggle item
	according to gconf value.

	* apotheke.schemas: New file.
	
2002-05-31  Jens Finke <jens@triq.net>

	* src/apotheke-directory.c (monitor_callback): #if 0'ed not yet 
	existing functions.

2002-05-31  Jens Finke <jens@triq.net>

	* configure.in: Added check for libfam.

	* acconfig.h: undef HAVE_LIBFAM.

	* src/apotheke-cvs-entries.[ch]: New files.
	
	* src/Makefile.am (apotheke_view_SOURCES): Added
	apotheke-cvs-entries.[ch].
	(apotheke_view_LADD): Added fam libs.
	
	* apotheke-directory.c (apotheke_directory_dispose): New function.
	(apotheke_directory_instance_init): Init monitor attribute.
	(apotheke_directory_class_init): Link dispose function.
	(monitor_callback): New function.
	(apotheke_directory_create_inital_file_list): Added monitor if fam
	is available.
	(apotheke_directory_apply_cvs_status): Rewrote this method and
	moved lot of functionality to apotheke-cvs-entries.c
	(apply_cvs_status_callback): New function.
